Finalizando o nivel iniciante do QuizGame.

--- a/game2.html
+++ b/game2.html
@@ -65,7 +65,8 @@
     </div>
 
 
-    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel Iniciante!</h1>
+    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel <strong style="color: yellow;">Estudioso</strong>!
+    </h1>
 
     <div class="div-title-learn">
 
@@ -141,7 +142,7 @@
             </details>
 
             <div class="btn-confirmar">
-                <a href="quizpy.html">Jogar!</a>
+                <a href="quizpy2.html">Jogar!</a>
             </div>
         </div>
 
