--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
             </details>
 
             <div class="btn-confirmar">
-                <a href="quiz1.html">Jogar!</a>
+                <a href="game2.html">Jogar!</a>
             </div>
 
         </div>
