--- a/quizpy2.html
+++ b/quizpy2.html
@@ -93,7 +93,7 @@
                     se suas vidas chegarem a 0 <br>
                     vai ter um aviso na tela <br>
                     escrito estude mais , <br>
-                    para você tentar novamente , apenas <br>
+                    para você tentar dnv , apenas <br>
                     reinicie a página para tentar <br>
                     novamente.
 
@@ -112,8 +112,7 @@
 
 
         <img style="border: none; " class="img-effect"
-            src="https://cdn3d.iconscout.com/3d/free/thumb/free-javascript-3d-icon-download-in-png-blend-fbx-gltf-file-formats--html-logo-vue-angular-coding-lang-pack-logos-icons-7577991.png"
-            width="300px">
+            src="https://cdn3d.iconscout.com/3d/premium/thumb/python-6815592-5602757.png" width="300px">
 
     </div>
 
@@ -131,12 +130,9 @@
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
 
-                Um programador cria 3 variáveis , a primeira contém <br>
-                o nome de n1 a segunda de n2 e a terceira de n3. <br>
-                com os seguintes valores : <br>
-                <strong style="background-color: yellow; color: black;">let n1 = 20 let n2 = 20 let n3 = 2</strong> <br>
-                após isso ele efetua este comando: <strong
-                    style="background-color: yellow; color: black;">cosnsole.log(n1+n2/n3)</strong>
+                Qual será o resultado desse comando? <br>
+                <strong style="background-color: yellow; color: black;">c = 1 <br>
+                    while c <= 10: <br> print(c) <br> c +=1 </strong>
 
 
             </h3>
@@ -145,9 +141,13 @@
             <h1 id="res1"></h1>
 
 
-            <button id="btn-certo1" style=" margin: 10px;" class="detalhes-smr" onclick="certo1()">30</button>
-            <button id="btn-errado2" style="margin: 10px;" class="detalhes-smr" onclick="errado1()">n1+n2/n3</button>
+            <button id="btn-certo1" style=" margin: 10px;" class="detalhes-smr" onclick="certo1()">
 
+                1,2,3,4,5,6,7,8,9,10 em coluna.
+
+            </button> <br>
+            <button id="btn-errado2" style="margin: 10px;" class="detalhes-smr" onclick="errado1()">Cria um função que
+                retorna "c". </button>
 
 
 
@@ -161,10 +161,13 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
-                O que o comando abaixo faz?<br>
+                Qual será o resultado desse código? <br>
                 <strong style="background-color: yellow; color: black;">
-                    console.log("Olá mundo")
-                </strong>
+                    idade = 17 <br>
+                    if idade >= 18: <br>
+                    print("Pode Votar!") <br>
+                    else: <br>
+                    print("Não pode Votar!") <br></strong>
 
 
 
@@ -174,10 +177,10 @@
             <h1 id="res2"></h1>
 
 
-            <button id="btn-certo3" style=" margin: 10px;" class="detalhes-smr" onclick="certo2()">Mostra Olá mundo
-                .</button>
-            <button id="btn-errado4" style="margin: 10px;" class="detalhes-smr" onclick="errado2()">Mostra
-                console.log("Olá mundo")</button>
+            <button id="btn-certo3" style=" margin: 10px;" class="detalhes-smr" onclick="certo2()">Não pode
+                Votar!</button>
+            <button id="btn-errado4" style="margin: 10px;" class="detalhes-smr" onclick="errado2()">Pode Votar!
+            </button>
 
 
 
@@ -191,7 +194,12 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
-                Qual é a forma correta de criar uma variável em JavaScript?
+
+                Oque é esse comando e oque ele faz? <br>
+                <strong style="background-color: yellow; color: black;"> def saudacao(): <br>
+                    print("Olá") <br>
+
+                    saudacao() <br></strong><br>
 
 
 
@@ -201,10 +209,10 @@
             <h1 id="res3"></h1>
 
 
-            <button id="btn-errado5" style=" margin: 10px;" class="detalhes-smr" onclick="errado3()"> nome =
-                valor</button> <br>
+            <button id="btn-errado5" style=" margin: 10px;" class="detalhes-smr" onclick="errado3()">
+                é um repetidor e ele efetua o comando Olá.</button> <br>
             <button id="btn-certo6" style="margin: 10px;" class="detalhes-smr" onclick="certo3()">
-                let nome = valor</button>
+                É uma Function , e ela mostra Olá após ser acionada.</button>
 
 
 
@@ -223,15 +231,16 @@
             <h3 style="text-align: center; border-bottom:solid blue ;">
 
                 Oque esse código irá exibir? <br>
-                <strong style="background-color: yellow; color: black;">console.log("5" + "5")</strong>
+                <strong style="background-color: yellow; color: black;">alunos = ["Arthur", "David", "Marcos"] <br>
+                    print(alunos[0])</strong>
 
             </h3>
             <h1 id="res4"></h1>
 
 
-            <button id="btn-errado8" style=" margin: 10px;" class="detalhes-smr" onclick="errado4()">"5" + "5"
+            <button id="btn-errado8" style=" margin: 10px;" class="detalhes-smr" onclick="errado4()">Arthur
             </button>
-            <button id="btn-certo7" style="margin: 10px;" class="detalhes-smr" onclick="certo4()"> 55
+            <button id="btn-certo7" style="margin: 10px;" class="detalhes-smr" onclick="certo4()"> indefined.
             </button>
 
 
@@ -248,9 +257,12 @@
             <h3 style="text-align: center; border-bottom:solid blue ;">
 
                 Qual será o resultado desse código: <br>
-                <strong style="background-color: yellow; color: black;">let Nome = "Anderson" <br>
-                    let Idade = 23 <br>
-                    console.log(`${Nome} tem ${Idade} anos de idade.`)</strong>
+                <strong style="background-color: yellow; color: black;">
+                    Nome = "Junior" <br>
+                    Idade = 25 <br>
+                    Cargo = "Sênior" <br>
+
+                    print(f"{Nome} tem {Idade} anos e seu cargo é dev {Cargo}")</strong> <br>
 
             </h3>
 
@@ -258,12 +270,12 @@
             <h1 id="res5"></h1>
 
 
-            <button id="btn-errado10" style=" margin: 10px;" class="detalhes-smr" onclick="errado5()">${Nome} tem
-                ${Idade} anos de idade. <br>
+            <button id="btn-errado10" style=" margin: 10px;" class="detalhes-smr" onclick="errado5()"> f"{Nome} tem
+                {Idade} anos e seu cargo é dev {Cargo}" <br>
             </button>
             <br>
-            <button id="btn-certo9" style="margin: 10px;" class="detalhes-smr" onclick="certo5()"> Anderson tem 23 anos
-                de idade.
+            <button id="btn-certo9" style="margin: 10px;" class="detalhes-smr" onclick="certo5()"> Junior tem 25 anos
+                anos e seu cargo é dev Sênior.
             </button>
 
 
@@ -280,8 +292,14 @@
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
 
-                Oque significa "While" e oque <br>
-                é possivel fazer com ele ?
+                Qual a diferença entre esses dois códigos? <br>
+                <strong style="background-color: yellow; color: black;">
+                    nomes = ["Arthur", "Pedro"]
+                </strong>
+                <br>
+                <strong style="background-color: yellow; color: black;">
+                    nomes = ("Arthur", "Pedro")
+                </strong>
 
             </h3>
 
@@ -289,28 +307,31 @@
             <h1 id="res6"></h1>
 
 
-            <button id="btn-errado11" style=" margin: 10px;" class="detalhes-smr" onclick="errado6()">While significa
-                "Enquanto" e <br> conseguimos fazer funções com ele
+            <button id="btn-errado11" style=" margin: 10px;" class="detalhes-smr" onclick="errado6()">Nenhuma pois são
+                iguais na visão do console.
             </button><br>
-            <button id="btn-certo12" style="margin: 10px;" class="detalhes-smr" onclick="certo6()">While significa
-                "Enquanto" <br>
-                e conseguimos fazer repetidores com ele.
+            <button id="btn-certo12" style="margin: 10px;" class="detalhes-smr" onclick="certo6()"> A primeira pode ser
+                alterada e a segunda não.
             </button>
 
 
 
         </div>
-
-
         <button style="margin: 10px;" class="detalhes-smr" onclick="vidasWin()">
             Click em min para ver seu resultado
         </button>
+
 
         <h1 style="color: white;" id="result"></h1>
 
         <div id="overlay" class="overlay">
             <h1 class="game-over">ESTUDE MAIS!💀</h1>
         </div>
+        <div id="overlay2" class="overlay2">
+            <h1 class="win">Destruiu o <strong style="font-family: monospace;">nivellll</strong>!
+            </h1>
+        </div>
+
 
 
 
@@ -319,6 +340,20 @@
 
 
     <script src="quiz.js"></script>
+
+
+
+</body>
+
+
+
+
+
+
+</div>
+
+
+<script src="quiz.js"></script>
 
 
 
