--- a/quizpy.html
+++ b/quizpy.html
@@ -92,10 +92,9 @@
                     1 pergunta errada = -1 vida <br>
                     se suas vidas chegarem a 0 <br>
                     vai ter um aviso na tela <br>
-                    escrito estude mais , <br>
-                    para você tentar dnv , apenas <br>
-                    reinicie a página para tentar <br>
-                    novamente.
+                    escrito: estude mais , <br>
+                    para você tentar novamente , apenas <br>
+                    reinicie a página. <br>
 
                 </h3>
                 </p>
@@ -313,6 +312,11 @@
         <div id="overlay" class="overlay">
             <h1 class="game-over">ESTUDE MAIS!💀</h1>
         </div>
+        <div id="overlay2" class="overlay2">
+            <h1 class="win">Destruiu o <strong style="font-family: monospace;">nivellll</strong>!
+            </h1>
+        </div>
+
 
 
 
