--- a/quizhtml.html
+++ b/quizhtml.html
@@ -92,10 +92,10 @@
                     1 pergunta errada = -1 vida <br>
                     se suas vidas chegarem a 0 <br>
                     vai ter um aviso na tela <br>
-                    escrito estude mais , <br>
+                    escrito: estude mais , <br>
                     para você tentar novamente , apenas <br>
-                    reinicie a página para tentar <br>
-                    novamente.
+                    reinicie a página. <br>
+
 
                 </h3>
                 </p>
@@ -341,16 +341,19 @@
 
 
         </div>
-
-
         <button style="margin: 10px;" class="detalhes-smr" onclick="vidasWin()">
             Click em min para ver seu resultado
         </button>
+
 
         <h1 style="color: white;" id="result"></h1>
 
         <div id="overlay" class="overlay">
             <h1 class="game-over">ESTUDE MAIS!💀</h1>
+        </div>
+        <div id="overlay2" class="overlay2">
+            <h1 class="win">Destruiu o <strong style="font-family: monospace;">nivellll</strong>!
+            </h1>
         </div>
 
 
