--- a/game1.html
+++ b/game1.html
@@ -65,7 +65,9 @@
     </div>
 
 
-    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel Iniciante!</h1>
+    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel <strong
+            style="color: rgb(0, 255, 0);">Iniciante!</strong>
+    </h1>
 
     <div class="div-title-learn">
 
