--- a/game3.html
+++ b/game3.html
@@ -65,7 +65,8 @@
     </div>
 
 
-    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel <strong style="color: yellow;">Estudioso</strong>!
+    <h1 style="font-size: 75px;" class="welcome">Bem Vindo! Ao Nivel <strong
+            style="color: rgb(255, 0, 0);">Programador</strong>!
     </h1>
 
     <div class="div-title-learn">
@@ -142,7 +143,7 @@
             </details>
 
             <div class="btn-confirmar">
-                <a href="quizpy2.html">Jogar!</a>
+                <a href="quizpy3.html">Jogar!</a>
             </div>
         </div>
 
@@ -161,7 +162,7 @@
             </details>
 
             <div class="btn-confirmar">
-                <a href="quizjs2.html">Jogar!</a>
+                <a href="quizjs3.html">Jogar!</a>
             </div>
         </div>
 
@@ -179,7 +180,7 @@
             </details>
 
             <div class="btn-confirmar">
-                <a href="quizhtml2.html">Jogar!</a>
+                <a href="quizhtml3.html">Jogar!</a>
             </div>
         </div>
 
