--- a/quizhtml2.html
+++ b/quizhtml2.html
@@ -86,6 +86,7 @@
                 <p>
                     Eai <strong>Pequeno Player</strong>! 👾<br>
                 <h3 style="text-align: center;">
+
                     O jogo contén 6 perguntas. <br>
                     E você tem 3 vidas. <br>
                     1 pergunta errada = -1 vida <br>
@@ -110,8 +111,7 @@
         </div>
 
 
-        <img style="border: none; " class="img-effect"
-            src="https://cdn3d.iconscout.com/3d/free/thumb/free-javascript-3d-icon-download-in-png-blend-fbx-gltf-file-formats--html-logo-vue-angular-coding-lang-pack-logos-icons-7577991.png"
+        <img style="border: none; border-radius: 0%; " class="img-effect" src="https://logodix.com/logo/470216.png"
             width="300px">
 
     </div>
@@ -129,23 +129,23 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
-                Qual será o resultado desse código? <br>
-
+                Qual será o resultado visual desse código? <br>
 
                 <strong style="background-color: yellow; color: black;">
-                    let c = 1 <br> while(c<=1){ <br> console.log(c) <br> c++ <br> } <br></strong>
-
+                    &lt;p&gt;Olá &lt;strong&gt;Mundo&lt;/strong&gt;&lt;/p&gt;
+                </strong>
             </h3>
-
 
 
             <h1 id="res1"></h1>
 
 
             <button id="btn-certo1" style=" margin: 10px;" class="detalhes-smr" onclick="certo1()">
-                1,2,3,4,5,6,7,8,9,10 em coluna.</button> <br>
+                A palavra "Mundo" ficará em negrito.
+            </button> <br>
             <button id="btn-errado2" style="margin: 10px;" class="detalhes-smr" onclick="errado1()">
-                1,1,1,1,1,1,1..... infinito.</button>
+                O texto inteiro ficará em negrito.
+            </button>
 
 
 
@@ -160,25 +160,23 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
-                O que o comando abaixo faz?<br>
+                Qual será a cor final do texto? <br>
+
                 <strong style="background-color: yellow; color: black;">
-                    let alunos = ["Maria","Amanda","Marcos","David"]
+                    p { color: red; } <br>
+                    p { color: blue; }
                 </strong>
-
-
-
             </h3>
 
 
             <h1 id="res2"></h1>
 
 
-            <button id="btn-certo3" style=" margin: 10px;" class="detalhes-smr" onclick="certo2()">Cria um array com os
-                alunos.
-            </button> <br>
-            <button id="btn-errado4" style="margin: 10px;" class="detalhes-smr" onclick="errado2()">Cria uma vaiável que
-                não pode ser alterada.
-            </button>
+            <button id="btn-certo3" style=" margin: 10px;" class="detalhes-smr" onclick="certo2()">
+                Azul
+            </button><br>
+            <button id="btn-errado4" style="margin: 10px;" class="detalhes-smr" onclick="errado2()">
+                Vermelho</button>
 
 
 
@@ -192,22 +190,22 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
-                Qual é a forma correta de criar uma function em JavaScript?
+                Qual é a diferença principal entre: <br>
 
-
-
-
+                <strong style="background-color: yellow; color: black;">
+                    display: none; <br>
+                    visibility: hidden;
+                </strong>
             </h3>
 
             <h1 id="res3"></h1>
 
 
-            <button id="btn-errado5" style=" margin: 10px;" class="detalhes-smr" onclick="errado3()"> While(){<br>
-                }
+            <button id="btn-errado5" style=" margin: 10px;" class="detalhes-smr" onclick="errado3()">
+                Ambos removem o elemento completamente da página.
             </button> <br>
-            <button id="btn-certo6" style="margin: 10px;" class="detalhes-smr" onclick="certo3()">function
-                NameFunction(){ <br>
-                }
+            <button id="btn-certo6" style="margin: 10px;" class="detalhes-smr" onclick="certo3()">
+                display remove o espaço, visibility apenas esconde mas mantém o espaço.
             </button>
 
 
@@ -225,19 +223,24 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
+                Se um elemento tem: <br>
 
-                Oque esse código irá exibir? <br>
-                <strong style="background-color: yellow; color: black;">let nome = ["Arthur","David"] <br>
-                    console.log(`${nome[1]} tem 14 anos`)</strong>
+                <strong style="background-color: yellow; color: black;">
+                    width: 200px;<br>
+                    padding: 20px;<br>
+                    border: 5px solid black;
+                </strong><br>
 
+                Qual será a largura total padrão (sem box-sizing)?
             </h3>
             <h1 id="res4"></h1>
 
 
-            <button id="btn-errado8" style=" margin: 10px;" class="detalhes-smr" onclick="errado4()">Arthur tem 14 anos
-            </button>
-            <button id="btn-certo7" style="margin: 10px;" class="detalhes-smr" onclick="certo4()"> David tem 14 anos
-            </button>
+            <button id="btn-errado8" style=" margin: 10px;" class="detalhes-smr" onclick="errado4()">
+                200px
+            </button> <br>
+            <button id="btn-certo7" style="margin: 10px;" class="detalhes-smr" onclick="certo4()">
+                250px</button>
 
 
 
@@ -251,31 +254,20 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
-
-                Qual será o resultado desse código: <br>
-                <strong style="background-color: yellow; color: black;"> let idade = 18 <br>
-                    let carteira = true
-
-                    if (idade >= 18 && carteira == true) { <br>
-
-                    console.log("Apto") <br>
-
-                    } else { <br>
-                    console.log("inapto") <br>
-                    } </strong>
-
+                Qual é a vantagem de usar &lt;section&gt; ou &lt;article&gt; ao invés de apenas &lt;div&gt;?
             </h3>
+
 
 
             <h1 id="res5"></h1>
 
 
             <button id="btn-errado10" style=" margin: 10px;" class="detalhes-smr" onclick="errado5()">
-                inapto <br>
+                Não existe diferença.> <br>
             </button>
             <br>
             <button id="btn-certo9" style="margin: 10px;" class="detalhes-smr" onclick="certo5()">
-                Apto
+                Melhora semântica, acessibilidade e SEO.
             </button>
 
 
@@ -291,29 +283,33 @@
             <br>
 
             <h3 style="text-align: center; border-bottom:solid blue ;">
+                Qual será a cor final do texto "DevTask"? <br>
 
-                Oque significa "Return" e oque <br>
-                é possivel fazer com ele ?
-
+                <strong style="background-color: yellow; color: black;">
+                    p { color: blue; } <br>
+                    .texto { color: red; } <br>
+                    #titulo { color: green; } <br>
+                </strong>
+                <br>
+                &lt;p id="titulo" class="texto" style="color: purple;"&gt;
+                DevTask
+                &lt;/p&gt;
             </h3>
+
 
 
             <h1 id="res6"></h1>
 
 
-            <button id="btn-errado11" style=" margin: 10px;" class="detalhes-smr" onclick="errado6()">retorn significa
-                "retorna" <br>
-                e conseguimos excluir valores com ele .
-            </button><br>
+            <button id="btn-errado11" style=" margin: 10px;" class="detalhes-smr" onclick="errado6()">
+                Verde </button><br>
             <button id="btn-certo12" style="margin: 10px;" class="detalhes-smr" onclick="certo6()">
-                return significa
-                "Retorno" e <br> conseguimos retornar valores com ele.
+                Roxo
             </button>
 
 
 
         </div>
-
         <button style="margin: 10px;" class="detalhes-smr" onclick="vidasWin()">
             Click em min para ver seu resultado
         </button>
@@ -328,7 +324,6 @@
             <h1 class="win">Destruiu o <strong style="font-family: monospace;">nivellll</strong>!
             </h1>
         </div>
-
 
 
 
