--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             </details>
 
             <div class="btn-confirmar">
-                <a href="quiz1.html">Jogar!</a>
+                <a href="game3.html">Jogar!</a>
             </div>
 
         </div>
